# baseball-win-prediction

./: .gitignore  CHANGELOG.md  DATA_REQUIREMENTS.md  EXPERIMENT_RUNBOOK.md  MODEL_IMPROVEMENT_LOG.md  PRE_LINEUP_SOURCE_PLAN.md  PROJECT_CHECKLIST.md  PROJECT_DIRECTION.md  RAW_DATA_COLLECTION.md  README.md  WORKLOG.md  pyproject.toml
configs/: season_holdout_statcast.toml
scripts/: augment_kbo_weather_open_meteo.py  build_kbo_features_and_experiment.py  build_season_to_date_features.py  build_statcast_feature_pipeline.py  calibrate_runs_predictions.py  collect_statcast_parallel.py  evaluate_ou_with_market_lines.py  evaluate_recent_form_overlay.py  parse_proeyekyuu_game_pages_static.py  predict_kbo_date.py  rebuild_mlb_features_from_enriched_logs.py  rolling_in_season_calibration.py  run_expected_runs_feature_experiment.py  run_feature_group_ablation.py  run_kbo_feature_stage_experiment.py  run_model_test_experiment.py  run_multiseed_model_experiment.py  run_npb_full_2024_model.py  run_npb_proeyekyuu_pipeline.py  run_npb_smoke_model_predictions.py  run_pre_lineup_fixture_smoke.py  run_recent_form_v2_ablation.py  run_recent_season_challenger.py  run_runs_oof_predictions.py  run_score_model_comparison.py  run_stable_group_ablation.py  summarize_feature_stability.py  summarize_model_variant_runs.py
src/: README.md
tests/: test_cli_helpers.py  test_collectors.py  test_config.py  test_evaluation.py  test_expected_runs.py  test_features.py  test_id_map.py  test_models.py  test_park_factors.py  test_reporting.py  test_retrosheet.py  test_standardize.py  test_statcast.py  (+1 more)
(+575 files in other folders)
