[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlb-winprob"
version = "0.1.5"
description = "MLB sabermetrics-based game win probability research pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "joblib>=1.3",
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
boosters = [
  "catboost>=1.2",
  "lightgbm>=4.0",
  "xgboost>=2.0",
]
data = [
  "pybaseball>=2.2",
]
dev = [
  "pytest>=7.0",
]

[project.scripts]
mlb-winprob = "mlb_winprob.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
